<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	android:gravity="left">
    <TextView
        android:layout_width="40dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:text="@string/username" /> 
       <EditText
        android:hint="@string/usernametip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:maxLength="25"
        android:singleLine="true"/>
   	<TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/password" />
    <EditText 
        android:hint="@string/passwordtip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:maxLength="16"
        android:inputType="textPassword" 
        android:singleLine="true"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="horizontal"
	    android:gravity="center_horizontal">
        <Button 
	        android:id="@+id/enterbut"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content" 
	        android:textSize="20sp"
	        android:text="@string/enter" />
    
	    <Button 
	        android:id="@+id/loginbut"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/login" />
    </LinearLayout>
    
</LinearLayout>