<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	android:gravity="left">
	
    <TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/latitudeitem" />
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/latitudevalue" />
    <TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/longitudeitem" />
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/longitudevalue" />
    
</LinearLayout>